--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@redoxengine/redox-hl7-v2",
-  "version": "1.0.0",
+  "name": "@baburikon/redox-hl7-v2",
+  "version": "1.0.1",
   "description": "A parser for hl7 version 2 messages. Creates json from v2 messages, and creates v2 messages from json.",
   "main": "index.js",
   "directories": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "lib": "lib",
+    "test": "test"
   },
   "dependencies": {
     "async": "^1.2.1",
@@ -19,11 +20,14 @@
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
     "test": "node_modules/istanbul/lib/cli.js cover _mocha -- test/unit/ -R spec && mocha test/integration -R spec"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/RedoxEngine/redox-hl7-v2"
+    "url": "git+https://github.com/RedoxEngine/redox-hl7-v2.git"
   },
   "keywords": [
     "hl7",
