--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "directories": {
     "lib": "lib",
-    "test": "test"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "async": "^1.2.1",
